--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -14,7 +14,7 @@
           hover:shadow hover:scale-125
           active:shadow active:scale-125
         "
-        src="assets/images/github-logo.svg"
+        src="assets/images/github.svg"
         alt="GitHub logo"
       />
     </a>
