--- a/src/app/shared/components/menu/components/topbar/topbar.component.html
+++ b/src/app/shared/components/menu/components/topbar/topbar.component.html
@@ -22,7 +22,7 @@
       matTooltip="GitHub"
       matTooltipPosition="below"
     >
-      <img class="rounded-full h-8" src="assets/images/github-logo.svg" />
+      <img class="rounded-full h-8" src="assets/images/github.svg" />
     </a>
     <span *ngIf="version" class="ml-2 leading-sm text-sm">v{{ version }}</span>
   </div>
