--- a/src/app/shared/components/topbar/topbar.component.html
+++ b/src/app/shared/components/topbar/topbar.component.html
@@ -1,8 +1,5 @@
-<mat-toolbar color="primary" class="z-10 h-auto p-4 fixed">
-  <div class="cursor-pointer flex items-center" (click)="onMenuClick()">
-    <mat-icon class="h-8 w-8 text-3xl"> menu </mat-icon>
-  </div>
-  <div class="ml-4 flex items-end">
+<mat-toolbar color="primary" class="flex-none z-10 h-auto p-4 fixed">
+  <div class="flex items-end">
     <a
       href="https://github.com/Gummiees/time-sheet"
       target="_blank"
