Reverse order of the dates, change date formats, upgrade to V1.0.0

--- a/src/app/components/home/form/home-form.component.html
+++ b/src/app/components/home/form/home-form.component.html
@@ -10,7 +10,7 @@
   </mat-form-field>
   <p-calendar
     class="mat-calendar md:ml-2"
-    dateFormat="dd/mm/yy"
+    dateFormat="yy-mm-dd"
     hourFormat="24"
     appendTo="body"
     [showIcon]="true"
