--- a/src/app/components/home/week/week.component.html
+++ b/src/app/components/home/week/week.component.html
@@ -46,7 +46,7 @@
               <p-calendar
                 appendTo="body"
                 class="ml-2"
-                dateFormat="dd/mm/yy"
+                dateFormat="yy-mm-dd"
                 hourFormat="24"
                 [touchUI]="commonService.isMobileDevice()"
                 [showTime]="true"
