--- a/src/app/components/history/history.component.html
+++ b/src/app/components/history/history.component.html
@@ -64,7 +64,7 @@
               <p-calendar
                 appendTo="body"
                 class="ml-2"
-                dateFormat="dd/mm/yy"
+                dateFormat="yy-mm-dd"
                 hourFormat="24"
                 [showTime]="true"
                 [showWeek]="true"
@@ -75,7 +75,7 @@
             </div>
           </ng-template>
           <ng-template pTemplate="output">
-            {{ item.date | date: 'dd/MM/yyyy HH:mm' }}
+            {{ item.date | date: 'yyyy-MM-dd HH:mm' }}
           </ng-template>
         </p-cellEditor>
       </td>
